--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <form id="searchForm" class="header-searchForm">
           <input type="text" placeholder="Search" />
         </form>
-        <button id="searchBtn">🔍</button>
+        <button id="searchBtn" class="btnSearch inactive">🔍</button>
       </div>
       <span class="errorSearch inactive"></span>
     </header>
